--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
     .container {
         width: 100%;
     }
+
+    #root {
+        width: 800px;
+    }
 </style>
 <body>
 <div class='container'>
     <div id='root'></div>
-    <img data-imageTagged='1' src="./images/test1.jpg"/>
+    <!--<img data-imageTagged='1' src="./images/test1.jpg"/>-->
 </div>
 
 <script src="/static/bundle.js"></script>
@@ -39,7 +43,84 @@
 
             handlers: {
 //            click: 'toggle'
-            }
+            },
+            "visualTags": [
+                {
+                    "id": 352,
+                    "x": 0.985,
+                    "y": 0.007,
+                    "sourceId": 186,
+                    "source": {
+                        "id": 186,
+                        "title": "右上",
+                        "isFactual": false,
+                        "castUrl": "http://api.wallstcn.com/v2/polls/118/choice/186/votes",
+                        "numOfVotes": 0,
+                        "percentage": 0,
+                        "isSelected": false
+                    }
+                },
+                {
+                    "id": 353,
+                    "x": 0.016,
+                    "y": 0.011,
+                    "sourceId": 187,
+                    "source": {
+                        "id": 187,
+                        "title": "左上",
+                        "isFactual": false,
+                        "castUrl": "http://api.wallstcn.com/v2/polls/118/choice/187/votes",
+                        "numOfVotes": 4,
+                        "percentage": 0.571,
+                        "isSelected": false
+                    }
+                },
+                {
+                    "id": 354,
+                    "x": 0.983,
+                    "y": 0.995,
+                    "sourceId": 188,
+                    "source": {
+                        "id": 188,
+                        "title": "右下",
+                        "isFactual": false,
+                        "castUrl": "http://api.wallstcn.com/v2/polls/118/choice/188/votes",
+                        "numOfVotes": 0,
+                        "percentage": 0,
+                        "isSelected": false
+                    }
+                },
+                {
+                    "id": 355,
+                    "x": 0.027,
+                    "y": 0.993,
+                    "sourceId": 189,
+                    "source": {
+                        "id": 189,
+                        "title": "左下",
+                        "isFactual": false,
+                        "castUrl": "http://api.wallstcn.com/v2/polls/118/choice/189/votes",
+                        "numOfVotes": 1,
+                        "percentage": 0.143,
+                        "isSelected": false
+                    }
+                },
+                {
+                    "id": 356,
+                    "x": 0.439,
+                    "y": 0.449,
+                    "sourceId": 190,
+                    "source": {
+                        "id": 190,
+                        "title": "中间",
+                        "isFactual": false,
+                        "castUrl": "http://api.wallstcn.com/v2/polls/118/choice/190/votes",
+                        "numOfVotes": 2,
+                        "percentage": 0.286,
+                        "isSelected": false
+                    }
+                }
+            ],
         }
     }).init();
 </script>
