--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
         settings: {
             edit: true,
             type: 'informaton',
+//            hasMask: true,
             align: {
                 y: 'top',
                 x: 'left'
             },
             offset: {
-                top: -15,
-                left: 20
+                top: 0,
+                left: 0
             },
 
             handlers: {
@@ -52,7 +53,7 @@
                     "sourceId": 186,
                     "source": {
                         "id": 186,
-                        "title": "右上",
+                        "title": "右上dsc,sdl,",
                         "isFactual": false,
                         "castUrl": "http://api.wallstcn.com/v2/polls/118/choice/186/votes",
                         "numOfVotes": 0,
@@ -92,8 +93,8 @@
                 },
                 {
                     "id": 355,
-                    "x": 0.027,
-                    "y": 0.993,
+                    "x": 0.439,
+                    "y": 0.8,
                     "sourceId": 189,
                     "source": {
                         "id": 189,
@@ -112,7 +113,7 @@
                     "sourceId": 190,
                     "source": {
                         "id": 190,
-                        "title": "中间",
+                        "title": "中间中间中间中间",
                         "isFactual": false,
                         "castUrl": "http://api.wallstcn.com/v2/polls/118/choice/190/votes",
                         "numOfVotes": 2,
