--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
 //            click: 'toggle'
             },
             "visualTags": [
-                {
-                    "id": 352,
-                    "x": 0.985,
-                    "y": 0.007,
-                    "sourceId": 186,
-                    "source": {
-                        "id": 186,
-                        "title": "右上dsc,sdl,",
-                        "isFactual": false,
-                        "castUrl": "http://api.wallstcn.com/v2/polls/118/choice/186/votes",
-                        "numOfVotes": 0,
-                        "percentage": 0,
-                        "isSelected": false
-                    }
-                },
+//                {
+//                    "id": 352,
+//                    "x": 0.985,
+//                    "y": 0.007,
+//                    "sourceId": 186,
+//                    "source": {
+//                        "id": 186,
+//                        "title": "右上dsc,sdl,",
+//                        "isFactual": false,
+//                        "castUrl": "http://api.wallstcn.com/v2/polls/118/choice/186/votes",
+//                        "numOfVotes": 0,
+//                        "percentage": 0,
+//                        "isSelected": false
+//                    }
+//                },
                 {
                     "id": 353,
                     "x": 0.016,
@@ -77,21 +77,21 @@
                         "isSelected": false
                     }
                 },
-                {
-                    "id": 354,
-                    "x": 0.983,
-                    "y": 0.995,
-                    "sourceId": 188,
-                    "source": {
-                        "id": 188,
-                        "title": "右下",
-                        "isFactual": false,
-                        "castUrl": "http://api.wallstcn.com/v2/polls/118/choice/188/votes",
-                        "numOfVotes": 0,
-                        "percentage": 0,
-                        "isSelected": false
-                    }
-                },
+//                {
+//                    "id": 354,
+//                    "x": 0.983,
+//                    "y": 0.995,
+//                    "sourceId": 188,
+//                    "source": {
+//                        "id": 188,
+//                        "title": "右下",
+//                        "isFactual": false,
+//                        "castUrl": "http://api.wallstcn.com/v2/polls/118/choice/188/votes",
+//                        "numOfVotes": 0,
+//                        "percentage": 0,
+//                        "isSelected": false
+//                    }
+//                },
                 {
                     "id": 355,
                     "x": 0.439,
