--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <div id='root'></div>
     <!--<img data-imageTagged='1' src="./images/test1.jpg"/>-->
 </div>
-
-<script src="/static/bundle.js"></script>
+<script src="//cdn.bootcss.com/react/15.2.0/react.min.js"></script>
+<script src="//cdn.bootcss.com/react/15.2.0/react-dom.min.js"></script>
+<script src="./dist/react-imageTags.min.js"></script>
 </body>
 <script>
     var imageTag = new ImageTag({
